# rbk

./: .gitignore  Cargo.toml  README.md  demo.tape
core/: Cargo.toml
core/src/: lib.rs  notes.rs  session.rs  terminal.rs
ntx/: Cargo.toml
ntx/src/: app.rs  config.rs  main.rs  notes.rs  paths.rs  render.rs  ui.rs
ntx/src/quickstart/: 1-welcome.md  2-navigation.md  3-code-blocks.md  4-your-projects.md
rbk/src/: main.rs  ui.rs
