[package]
name = "ntx"
description = "Notes terminal — project notes with an integrated shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ntx"
path = "src/main.rs"

[dependencies]
ntx-core = { path = "../core" }
anyhow.workspace = true
crossterm = "0.28"
ratatui = "0.29"
arboard = "3"
dirs.workspace = true
chrono.workspace = true
vt100.workspace = true
